[metadata]
name = readingnotes
version = 1.0
description = Compile your reading notes into a static website
long_description = file: README.md
license = GPL (3.0)
author = Alexis Métaireau
author_email = alexis@notmyidea.org
url = https://github.com/almet/readingnotes
download_url = https://github.com/almet/readingnotes/tarball/master
keywords = static notes readings
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    python-slugify
    jinja2
    PyYAML

[options.package_data]
* = *.md, *.py, *.yaml

[options.entry_points]
console_scripts =
    readingnotes = readingnotes.__main__:main